--- a/.github/workflows/workflow-commands.yaml
+++ b/.github/workflows/workflow-commands.yaml
@@ -6,4 +6,16 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   name: Setting an error message
-                run: echo "::error::Missing semicolon"    
+                run: echo "::error::Missing semicolon"   
+            -   name: Setting an error message with parameter
+                run: echo "::error title:Error title, file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing Semicolon" 
+            -   name: Group of logs
+                run: |
+                    echo "::group::My group title"
+                    echo "Inside group"
+                    echo "::endgroup"
+            -   name: Masking a value
+                run: echo "::add-mask::Secret String"
+            -   name: Echo a secret
+                run: echo "Secret String"
+    
