--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -2,6 +2,15 @@ name: Checkout
 on: [push]
 
 jobs:
+    checkout-action:
+        runs-on: ubuntu-latest
+        steps:
+            -   name: List Files Before checkout
+                run: ls -a
+            -   uses: action/checkout@v3
+            -   name: List Files After checkout
+                run: ls -a
+
     checkout-and-display-files:
         runs-on: ubuntu-latest
         steps:
