--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -7,7 +7,7 @@ jobs:
         steps:
             -   name: List Files Before checkout
                 run: ls -a
-            -   uses: action/checkout@v3
+            -   uses: actions/checkout@v3
             -   name: List Files After checkout
                 run: ls -a
 
